force-app/main/default/objects/Transaction_Log__c/fields/Error_Log_Time__c.field-meta.xml
<CustomField>
    <fullName>Error_Log_Time__c</fullName>
    <label>Error Log Time</label>
    <type>DateTime</type>
</CustomField>