force-app/main/default/objects/Transaction_Log__c/fields/Review_Comment__c.field-meta.xml
<CustomField>
    <fullName>Review_Comment__c</fullName>
    <label>Review Comment</label>
    <length>60768</length>
    <type>LongTextArea</type>
</CustomField>